# cppgui-software-tutorial-12-2025

./: .gitignore  README.md  final.cpp  main.cpp  shell.nix  slides.md
.github/workflows/: slides.yml
assets/: index-B_q5D6du.js
cpp/: CMakeLists.txt  run.sh
dearpygui/: final.py  main.py
python/: final.py  requirements.txt
slides/: index.html  index.js  package-lock.json  package.json  slides.md  style.css  vite.config.js
